# HardDisks

./: .gitattributes  .gitignore  00ALLINONE.c  LICENSE  README.md  expain_timescale_dynamics.txt  hsfast2.tgz  log.lammps  traj_exact.lammpstrj
00_EDMD_TIME/: Makefile  README.txt  edmd_time
LAMMPS/: FINAL_PAPER_RESULTS.md  PLOTS_README.md  README.md  RESULTS.md  analyze_energy_transfer.py  analyze_oscillations.py  create_detailed_plots.py  create_detailed_plots_long.py  in.energy_transfer  in.exact_paper  in.final_balanced  in.final_correct  in.harddisk  in.long_run  in.paper_final  in.paper_stable  in.rigid_wall_50_50  log.lammps  (+25 more)
hspist3/: 00ALLINONE  00ALLINONE.c  00LEGACYALLINONE_FUNCTIONS.c  CMakeLists.txt  Makefile  Makefile.gui  constants.h  display.c  display.h  energy_log.csv  experiment_gui.py  gaussrand.c  gaussrand.h  glgraph.c  globals.c  globals.h  gui_advanced  gui_advanced.c  gui_config  gui_config.c  hspist2.c  hspist2.h  main.c  myrand4.h  physicssimulation.c  physicssimulation.h  piston.c  piston.h  run_interactive.sh  sim  tunnel_events.csv  vWindow.c  wall_position.csv  wall_x_FFT.py  wall_x_FFT_utils_functions_left.py
hspist3/01_improvements_bugsfxed_dev/: 26_05_20_ABLETON_PLUGIN_VST_SDL2_HARDDISCFLOW.md
hspist3/edmd_core/: EDMD_ACCELERATED_CORE.md  edmd.c  edmd.h  edmd_accelerated.c  edmd_accelerated.h
hspist3/experiments_speed_of_sound/mode0_real_units/: wall_x_positions_L0_75_wallmassfactor_20_run0.csv
hspist3/experiments_speed_of_sound/mode1_normalized_units/: wall_x_positions_L0_75_wallmassfactor_20_run0.csv
hspist3/src/: hspist3.c
(+63 files in other folders)
